-removed requirements search limit -implemented display/search/sort by credits -added sorting to direct search -made search results removed on switch between search types -added message for 0 search results

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -151,15 +151,15 @@ select {
     margin-right: 1em;
 }
 
-.search-results {
+#search-results {
     margin-top: 2em;
 }
 
-.search-results table {
+#search-results table {
     font-size: 1.3em;
 }
 
-.search-results table a {
+#search-results table a {
     color: #1768AC;
 }
 
