--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="/account">Welcome, <%= user %>! <i class="fas fa-user"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Log Out <i class="fas fa-sign-out-alt"></i></a>
+                    <a class="nav-link" href="/logout">Logout <i class="fas fa-sign-out-alt"></i></a>
                 </li>
             </ul>
         </div>
